[SUREFIRE-313] Handle umlaut in dir name.
git-svn-id: https://svn.apache.org/repos/asf/maven/surefire/trunk@597766 13f79535-47bb-0310-9956-ffa450edef68